--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="heeraj.png" alt="image"></td>
+            <td><img src="Dheeraj.png" alt="image"></td>
             <td> <h1>Dheeraj Bagwan</h1>
     <p><em> Founder and CEO of <strong><a href="https://www.facebook.com/bagwandheeraj/"> My Website </a></strong>.</em></p>
     <p>I am an IOS and Web developer. I love dancing and playing cricket</p></td>
